Add user list API and display on UI (#15)
